# ZDCode

./: .banditrc  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .yo-rc.json  JumpZombie.zc2  LICENSE.md  NewRocket.pk3  NewRocket.zc2  README.md  ZDCodeBundle_2.6.0.pk3  ZDCodeBundle_2.6.1.1.pk3  ZDCodeBundle_2.6.1.2.pk3  ZDCodeBundle_2.6.1.pk3  ZDCodeBundle_2.6.2.pk3  ZDCodeBundle_2.6.3.pk3  ZDCodeBundle_2.6.3.pk3.bak  ZDCodeBundle_2.6.4.pk3  ZDCodeBundle_2.6.5.pk3  ZDCodeBundle_2.7.0.dec  ZDCodeBundle_2.7.0.pk3  ZDCodeBundle_2.7.1.dec  ZDCodeBundle_2.7.1.pk3  ZDCodeBundle_2.7.2.dec  ZDCodeBundle_2.7.2.pk3  ZDCodeBundle_2.8.0.dec  ZDCodeBundle_2.8.0.pk3  ZDCodeBundle_2.9.0.dec  ZDCodeBundle_2.9.0.pk3  ZDCode_2.10.0_assets.pk3  ZDCode_2.10.0_code.pk3  ZDCode_2.11.0.dec  ZDCode_2.11.0_code.pk3  ZDCode_2.11.0_code_pre1.pk3  ZDCode_2.11.1_code.pk3  Zake.ini  changelog.json  changelog.schema.json  funcnames.txt  (+10 more)
example/: ZDCODE.index
examples/: AaaSpawner.dec  AaaSpawner.pk3  AaaSpawner.zc2  DoomFox.dec  DoomFox.zc2  FireballFlavors.dec  FireballFlavors.zc2  GoldZombieStatue.dec  GoldZombieStatue.zc2  ItemFountain.dec  ItemFountain.zc2  JumpZombie.dec  JumpZombie.zc2  LaserGuys.dec  LaserGuys.zc2  MonsterCluster.dec  MonsterCluster.zc2  NewRocket.dec  NewRocket.zc2  PusherCritter.dec  PusherCritter.zc2  RewardChest.dec  RewardChest.pk3  RewardChest.zc2  Seller.dec  Seller.zc2  Terrain.dec  Terrain.zc2  ZombieGym.dec  ZombieGym.zc2
tests/: new_keepst.zc2  offset.zc2  preproc_test.zc2  whilejump_break.zc2
zdcode/: __init__.py  __main__.py  bundle.py  parser.py  program.py  (+3 more)
(+50 files in other folders)
