[tool.poetry]
name = "zdcode"
version = "2.12.2"
description = "A ZDoom DECORATE transpiler and mod content build system"
authors = ["Gustavo6046 <rehermann6046@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
parsy = "^1.3.0"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.7.2"
mypy = "^0.812"
pyment = "^0.3.3"

[tool.poetry.scripts]
zdcode = 'zdcode.program:main'
zake = 'zdcode.program:main_zake'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
