[tool.poetry]
name = "zdcode"
version = "2.14.0"
description = "A ZDoom DECORATE transpiler and mod content build system"
authors = ["wallabra <rehermann6046@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parsy = "^1.4.0"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.12.0"
pylint = "^1.9.4"
mypy = "^1.5.1"

[tool.poetry.scripts]
zdcode = 'zdcode.program:main'
zake = 'zdcode.program:main_zake'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
